# rtu-schedule-parser

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  modules.rst
docs/api/: rtu_schedule_parser.downloader.rst  rtu_schedule_parser.rst  rtu_schedule_parser.utils.rst
examples/: find_teacher.py  gel_all_institute_rooms.py  google_calendar_import.py  main.py  parse_exams.py  parse_schedule.py  rooms.csv
rtu_schedule_parser/: __init__.py  college_formatter.py  college_parser.py  constants.py  exams_excel_parser.py  excel_formatter.py  excel_parser.py  exceptions.py  formatter.py  parser.py  schedule.py  schedule_data.py  schedule_downloader.py
rtu_schedule_parser/downloader/: __init__.py  schedule_document.py  schedule_downloader.py
rtu_schedule_parser/utils/: __init__.py  academic_calendar.py
tests/: college_formatter.py  conftest.py  test_rtu_schedule_parser.py  test_schedule.xlsx
tests/academic_calendar/: test_academic_calendar.py
tests/excel_formatter/: test_get_lessons.py  test_get_rooms.py  test_get_teachers.py  test_get_types.py  test_get_weeks.py
tests/schedule_data/: test_schedule_data.py
tests/schedule_downloader/: test_download_schedule.py  test_get_documents.py
