[tool.poetry]
name = "rtu_schedule_parser"
version = "0.2.0"
description = "Easy extraction of the MIREA - Russian Technological University schedule from Excel documents."
authors = ["Sergey Dmitriev <51058739+0niel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
openpyxl = "^3.0.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.4.3"
xls2xlsx = "^0.1.5"
currency-symbols = "1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^5.1.1"
furo = "^2022.6.21"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
